--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.2.0 
+  firebase_auth: ^1.2.0
+  google_sign_in: "^4.5.1"
   font_awesome_flutter: ^8.8.1
   flutter_svg: ^0.19.1
-  google_maps_flutter: ^0.5.27+2
-  permission_handler: ^5.0.0
-  location: ^3.0.2
+  #google_maps_flutter: ^0.5.27+2
+  permission_handler: ^8.0.0+2
+  #location: ^3.0.2
+  sms_autofill: ^2.0.0
+  http: ^0.13.3
+  shared_preferences: ^2.0.6
+  flushbar: ^1.10.4
+  pattern_formatter: ^2.0.0
+  flutter_datetime_picker: ^1.5.1
+  
+  
+  
 
 dev_dependencies:
   flutter_test:
